--- a/test/lit.cfg
+++ b/test/lit.cfg
@@ -3,10 +3,6 @@
 import lit.formats
 import lit.util
 
-from lit.llvm import llvm_config
-from lit.llvm.subst import ToolSubst
-from lit.llvm.subst import FindTool
-
 # Configuration file for the 'lit' test runner.
 
 # name: The name of this test suite.
@@ -25,17 +21,16 @@ config.excludes = ['CMakeLists.txt']
 config.test_source_root = os.path.dirname(__file__)
 
 # test_exec_root: The root path where tests should be run.
-config.test_exec_root = os.path.join(config.llvm_obj_root, 'test')
+llvm_obj_root = getattr(config, 'llvm_obj_root', None)
+if llvm_obj_root is not None:
+    config.test_exec_root = os.path.join(llvm_obj_root, 'test')
 
-llvm_config.use_default_substitutions()
-
-#llvm_config.use_clang()
-
-config.substitutions.append(('%PATH%', config.environment['PATH']))
-
-tool_dirs = [config.llvm_tools_dir]
+# Tweak the PATH to include the tools dir.
+if llvm_obj_root is not None:
+    llvm_tools_dir = getattr(config, 'llvm_tools_dir', None)
+    if not llvm_tools_dir:
+        lit_config.fatal('No LLVM tools dir set!')
+    path = os.path.pathsep.join((llvm_tools_dir, config.environment['PATH']))
+    config.environment['PATH'] = path
 
 tools = ['llvm-as', 'llvm-dis', 'llvm-spirv']
-
-llvm_config.add_tool_substitutions(tools, tool_dirs)
-
